# laposte

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py  tasks.py
app/laposte/: batch.py  exceptions.py  laposte.py
app/models/: shipment.py  tools.py
app/templates/: base.html  history.html  index.html
app/tests/: conftest.py  test_app.py  test_laposte_client.py
app/tests/cassettes/test_app/: test_get_shipment_status_delivered.yaml  test_get_shipment_status_invalid_number.yaml  test_update_shipments_status_basic_logic.yaml
app/tests/cassettes/test_laposte_client/: test_laposte_client_invalid_number.yaml  test_laposte_client_multiple_ok.yaml  test_laposte_client_ok.yaml  test_laposte_client_wrong_api_key.yaml
app/views/: __init__.py
